# Parthenon-interface

./: README.md  example.ipynb  interface.py  io_utils.py  pyproject.toml  test.ipynb
example_folder/: parthenon.out1.hst  parthenon.prim.00000.phdf  parthenon.prim.00000.phdf.xdmf  parthenon.prim.00001.phdf  parthenon.prim.00001.phdf.xdmf  parthenon.prim.00002.phdf  parthenon.prim.00002.phdf.xdmf  parthenon.prim.00003.phdf  parthenon.prim.00003.phdf.xdmf  parthenon.prim.00004.phdf  parthenon.prim.00004.phdf.xdmf  parthenon.prim.00005.phdf  parthenon.prim.00005.phdf.xdmf  parthenon.prim.00006.phdf  parthenon.prim.00006.phdf.xdmf  parthenon.prim.00007.phdf  parthenon.prim.00007.phdf.xdmf  parthenon.prim.final.phdf  parthenon.prim.final.phdf.xdmf  parthenon.spc_B.out6.00000.spc  parthenon.spc_B.out6.00001.spc  parthenon.spc_B.out6.00002.spc  parthenon.spc_B.out6.00003.spc  parthenon.spc_B.out6.00004.spc  parthenon.spc_B.out6.00005.spc  parthenon.spc_B.out6.00006.spc  parthenon.spc_B.out6.00007.spc  parthenon.spc_B.out6.00008.spc  parthenon.spc_B.out6.00009.spc  parthenon.spc_B.out6.00010.spc  parthenon.spc_B.out6.00011.spc  parthenon.spc_B.out6.00012.spc  parthenon.spc_B.out6.00013.spc  parthenon.spc_B.out6.00014.spc  parthenon.spc_B.out6.final.spc  parthenon.spc_rho.out7.00000.spc  parthenon.spc_rho.out7.00001.spc  parthenon.spc_rho.out7.00002.spc  parthenon.spc_rho.out7.00003.spc  parthenon.spc_rho.out7.00004.spc  (+28 more)
test_folder/: input.in  parthenon.B.out5.00001.spc  parthenon.B.out5.00005.spc  parthenon.B.out5.00006.spc  parthenon.B.out5.00010.spc  parthenon.out1.hst  (+61 more)
(+311 files in other folders)
